Remove unnecessary validation annotation

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -71,7 +71,8 @@
             value = draft.rejectAllOfClaim.howMuchHaveYouPaid.amount | numeral,
             changeLink = FullRejectionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }),
             bottomBorder = false,
-            bold = true)
+            bold = true
+          )
         }}
 
         {{
