--- a/src/main/features/claimant-response/views/court-offer.njk
+++ b/src/main/features/claimant-response/views/court-offer.njk
@@ -17,7 +17,7 @@
         {{
         repaymentPlanBlock(
           heading = 'The court`s proposed repayment plan',
-          paymentPlan = paymentPlan
+          paymentPlan = courtOrderPaymentPlan
         )
         }}
       {% endif %}
