--- a/src/main/features/dashboard/views/macro/claimStatus/noReponse.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/noReponse.njk
@@ -23,7 +23,7 @@
   <h2 class="heading-small">{{ t('You haven’t responded to this claim') }}</h2>
   <p>
     {{ t('You need to respond before 4pm on {{ responseDeadline }} {{ remainingTime }}.',
-      { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) }) | safe }}
+      { responseDeadline: claim.responseDeadline | date, remainingTime: timeRemaining(claim.remainingDays, isAfter4pm()) | trim }) | safe }}
   </p>
   <p>
     {{ _respondToClaimLink(claim) }}
