Add GA event to survey link

--- a/src/main/views/includes/service_survey_link.njk
+++ b/src/main/views/includes/service_survey_link.njk
@@ -1,3 +1,3 @@
 {% from "externalLink.njk" import externalLink %}
 
-<p>{{ externalLink('What did you think of this service?', customerSurveyUrl) }}</p>
+<p>{{ externalLink('What did you think of this service?', customerSurveyUrl, 'Survey link clicked') }}</p>
