--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -12,6 +12,26 @@
   </p>
 {% endmacro %}
 
+{% macro offerSettlementReachedForDefendant(claim) %}
+  {% if claim.settlement.isThroughAdmissions() %}
+    <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+
+    <p>
+      {{ t('The claimant can’t request a County Court Judgment against you if you pay by the agreed date.') }}
+    </p>
+  {% else %}
+    <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
+    <p>
+      {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
+    </p>
+  {% endif %}
+
+  <p>
+    {{ _downloadAgreementLink(claim) }}
+  </p>
+{% endmacro %}
+
 {% macro _downloadAgreementLink(claim) %}
-  <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download the agreement') }}</a>
+  <a
+    href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download the agreement') }}</a>
 {% endmacro %}
