Update contant for settlement reached

--- a/src/main/features/offer/views/settled.njk
+++ b/src/main/features/offer/views/settled.njk
@@ -18,7 +18,7 @@
         </div>
         <div class="receipt-download-container">
           <a
-            href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download settlement agreement (PDF)') }}</a>
+            href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download settlement agreement') }}</a>{{ t(' (PDF)') }}
         </div>
       </div>
 
