Rename pages to follow convention

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -69,7 +69,7 @@
           row(
             label = 'How much have you paid?',
             value = draft.rejectAllOfClaim.howMuchHaveYouPaid.amount | numeral,
-            changeLink = FullRejectionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }),
+            changeLink = FullRejectionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
             bottomBorder = false,
             bold = true
           )
