ROC-4289 Fix company CYA

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -86,7 +86,8 @@
           paymentPlan = draft.fullAdmission.paymentIntention.paymentPlan,
           explanation = draft.statementOfMeans.explanation.text,
           Paths = FullAdmissionPaths,
-          externalId = claim.externalId
+          externalId = claim.externalId,
+          statementOfMeansIsApplicable = statementOfMeansIsApplicable
         )
       }}
     {% endif %}
@@ -191,7 +192,8 @@
               paymentPlan = draft.partialAdmission.paymentIntention.paymentPlan,
               explanation = draft.statementOfMeans.explanation.text,
               Paths = PartAdmissionPaths,
-              externalId = claim.externalId
+              externalId = claim.externalId,
+              statementOfMeansIsApplicable = statementOfMeansIsApplicable
             )
           }}
         {% endif %}
