--- a/src/main/features/response/views/full-rejection/how-much-have-you-paid.njk
+++ b/src/main/features/response/views/full-rejection/how-much-have-you-paid.njk
@@ -19,7 +19,7 @@
       {{ poundInput(label = 'How much have you paid?', name = 'amount', form = form, bold = true) }}
 
       <h4 class="heading-small">{{ t('When did you pay this amount?') }}</h4>
-      {{ dateInput('date', form, hint = t('For example, {{ pastDate }}', { pastDate: pastDate | inputDate })) }}
+      {{ dateInput('date', form, hint = t('For example, {{ threeMonthsAgo }}', { threeMonthsAgo: 'now' | addDays(-90) | inputDate })) }}
 
       {{ textArea(label = 'How did you pay this amount?', name = 'text', form = form, bold = true) }}
 
