Sync implementation with prototype

--- a/src/main/features/response/views/full-rejection/how-much-have-you-paid.njk
+++ b/src/main/features/response/views/full-rejection/how-much-have-you-paid.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %}
 
-{% set heading = 'How much have you paid the claimant?' %}
+{% set heading = 'How much have you paid?' %}
 
 {% from "form.njk" import poundInput, textArea, saveAndContinueButton, csrfProtection, errorSummary %}
 {% from "date.njk" import dateInput %}
