Hack states paid from admissions

--- a/src/main/features/claimant-response/views/states-paid/check-and-send.njk
+++ b/src/main/features/claimant-response/views/states-paid/check-and-send.njk
@@ -18,7 +18,7 @@
         {% set paymentReceivedResponse = 'No' %}
       {% endif %}
 
-      {{ row(label = 'Has the defendant paid ' + paidAmount | numeral, bold = true, value = paymentReceivedResponse,
+      {{ row(label = 'Do you agree the defendant has paid ' + paidAmount | numeral + '?', bold = true, value = paymentReceivedResponse,
         changeLink = StatesPaidPaths.partPaymentReceivedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
     {% endif %}
 
@@ -30,9 +30,9 @@
       {% endif %}
 
       {% if draft.partPaymentReceived %}
-        {% set paymentAcceptedText = 'Do you want to settle the claim for the ' + paidAmount | numeral %}
+        {% set paymentAcceptedText = 'Do you want to settle the claim for the ' + paidAmount | numeral + '?' %}
       {% else %}
-        {% set paymentAcceptedText = 'Do you agree the defendant has paid ' + claimAmount | numeral%}
+        {% set paymentAcceptedText = 'Do you agree the defendant has paid ' + claimAmount | numeral + '?'  %}
       {% endif %}
       {{ row(label = paymentAcceptedText, bold = true, value = paymentAcceptedResponse,
         changeLink = StatesPaidPaths.settleClaimPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
