--- a/src/main/features/claim/views/claimant-mobile.njk
+++ b/src/main/features/claim/views/claimant-mobile.njk
@@ -1,17 +1,18 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, input, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Enter a contact number (optional)' %}
+{% set heading = 'Enter a phone number (optional)' %}
 
 {% block content %}
   <div class="grid-row">
       <div class="column-two-thirds">
 
-        <p>{{ t('We might need to contact you about your claim. We’ll only call on weekdays between 9am and 5pm.') }}</p>
+        <p>{{ t('We might need to speak to you about this claim. We’ll only call on weekdays between 9am and 5pm.') }}</p>
+        <p>{{ t('We’ll also give your number to the defendant.') }}</p>
         <form method="post">
           {{ csrfProtection(csrf) }}
 
-          {{ input('Enter a contact number (optional)', 'number', form, '', labelClass = 'visually-hidden') }}
+          {{ input('Enter a phone number (optional)', 'number', form, '', labelClass = 'visually-hidden') }}
           {{ saveAndContinueButton() }}
         </form>
       </div>
